<resources>
    <string name="label_cancel">បោះបង់</string>
    <string name="label_next">ជំហ៊ាន​បន្ទាប់​</string>
    <string name="app_name">SabayShop</string>
    <string name="label_sy_tab">ទំព័រដើម</string>
    <string name="label_fl_tab">ប្រភេទ</string>
    <string name="label_discover_tab">បានឃើញ</string>
    <string name="label_cart_tab">កន្រ្តកទំនិញ</string>
    <string name="label_mine_tab">គណនី​របស់​ខ្ញុំ</string>
    <string name="label_home_taobao">ការ​បញ្ជា​ទិញTaobao</string>
    <string name="label_national_transport">តាមដាន​ការ​ដឹកជញ្ជូន</string>
    <string name="label_home_return_back">ក្នុងរយះពេល72ម៉ោងដោះស្រាយបញ្ហា</string>
    <string name="label_hot_goods">ផលិតផល​ពេញនិយម</string>
    <string name="label_most_popular">ពេញនិយមបំផុត</string>
    <string name="label_intelligent_search">ស្វែងរក​ផលិតផល</string>
    <string name="label_intelligent_search_tips">អ្នកប្រហែលជាចូលចិត្ត</string>
    <string name="label_search_now">ស្វែងរកឥឡូវនេះ</string>
    <string name="label_open_now">បើកឥឡូវនេះ</string>
    <string name="label_home_search">ស្វែងរក​ផលិតផល</string>
    <string name="hint_search_goods">ស្វែងរកមុខទំនិញជាភាសាចិន</string>
    <string name="label_search_history">ធ្លាប់​ស្វែងរក</string>
    <string name="label_get_coupon">ប័ណ្ណ​បញ្ចុះ​តម្លៃ</string>
    <string name="label_goods_id_prefix">TaobaoID </string>
    <string name="label_exchange_rate_prefix">អត្រា​ប្តូ​រ​ប្រាក់ </string>
    <string name="label_freight">ថ្លៃដឹកជញ្ជូនTaobao</string>
    <string name="label_tb_freight_illustrate">ថ្លៃដឹកជញ្ជូនTaobao</string>
    <string name="tb_freight_illustrate_1">1.ថ្លៃដឹកជញ្ជូនTaobaoគឺជាការដឹកជញ្ជូនទំនិញដែលគិតថ្លៃដោយ Taobao។ ពេលបញ្ជាទិញសូមដាក់ស្នើសម្រាប់ការពិនិត្យឡើងវិញ​ សេវាកម្មអតិថិជននឹងពិនិត្យមើលថ្លៃដឹកជញ្ជូន Taobao ទើបបង់ប្រាក់បញ្ជាទិញ។</string>
    <string name="tb_freight_illustrate_2">2.ថ្លៃដឹកជញ្ជូនTaobao មិនគិតចូលថ្លៃសេវាកម្ម។</string>
    <string name="label_service">សេវាកម្ម</string>
    <string name="label_service_1">ការ​បញ្ជា​ទិញTaobao</string>
    <string name="label_service_2">បញ្ញេីគ្រប់ដំបន់</string>
    <string name="label_service_3">ក្នុងរយះពេល72ម៉ោងដោះស្រាយបញ្ហា</string>
    <string name="label_service_4">តាមដាន​ការ​ដឹកជញ្ជូន</string>
    <string name="label_prop">បានជ្រេីសរេីស</string>
    <string name="label_logistics">ដឹកជញ្ជូន</string>
    <string name="label_trace_title">រយះពេលដឹកជញ្ជូន</string>
    <string name="label_stock_up">រៀប​ចំ​ទំនិញ</string>
    <string name="label_1_3_day">1-3ថ្ងៃ</string>
    <string name="label_logistics_transportation">ដឹកជញ្ជូន</string>
    <string name="label_5_7_day">5-7ថ្ងៃ</string>
    <string name="label_delivery">ការដឹកជញ្ជូន</string>
    <string name="label_2_3_day">2-3ថ្ងៃ</string>
    <string name="label_customer_service">ទំនាក់ទំនង</string>
    <string name="label_cart">កន្រ្តកទំនិញ</string>
    <string name="label_add_to_cart">បញ្ចូល​ក្នុង​កន្ត្រក</string>
    <string name="tip_add_cart_succ">ការបន្ថែមជោគជ័យ</string>
    <string name="label_count">ចំនួន</string>
    <string name="label_goods_detail">ព​ត៌​មាន​លម្អិត​ពី​ទំនិញ</string>
    <string name="no_worry_shopping">សេវាកម្ម</string>
    <string name="label_taobao_purchasing">ការ​បញ្ជា​ទិញTaobao</string>
    <string name="label_taobao_tips">បញ្ជាទិញពីTaobaoផ្ទាល់​​ ជ្រើសរើសនូវទំនិញមានគុណភាពខ្ពស់​ ទុកចិត្តក្នុងការបញ្ជាទិញ។</string>
    <string name="label_national_transport_tips">ដឹកជញ្ជូនទូទាំង25ខេត្ត/ក្រុង</string>
    <string name="label_deliver_goods">100%ផ្ញេីទំនិញ តាមដាន​ការ​ដឹកជញ្ជូន</string>
    <string name="label_deliver_goods_tips">បន្ទាប់ពីការទូទាត់ប្រាក់រួច​នឹងធ្វើការបញ្ជាទិញជូន អាចតាមដានទំនិញក្នុងទំព័រ ការបញ្ជាទិញព័ត៌មានលម្អិត​ និង ស្ថានភាពដឹកជញ្ជូន។</string>
    <string name="label_service_3_tips">បន្ទាប់ពីទទួលបានទំនិញ​ បើមានបញ្ហា សូមទាក់ទងផ្នែកសេវាកម្មក្នុងរយះពេល72ម៉ោង​។</string>
    <string name="label_no_quality">ដាច់ស្តុក​</string>
    <string name="dialog_think_again">បោះបង់</string>
    <string name="dialog_delete">លុប</string>
    <string name="dialog_confirm_delete_cart">សម្រេចលុបចោល%dទំនិញ？</string>
    <string name="label_complete">រួចរាល់</string>
    <string name="label_delete">លុប</string>
    <string name="label_edit">កែសម្រួល</string>
    <string name="label_create_order">ទូទាត់​លុយ</string>
    <string name="dialog_edit_order_title">សូមបញ្ចូលបរិមាណ</string>
    <string name="label_fill_order_info">បញ្ជីទិញទំនិញ</string>
    <string name="order_dis_mode">វិធីសាស្ត្រ​ដឹកជញ្ជូន</string>
    <string name="label_pick_by_yourself">មកយកនៅហាង(ភ្នំពេញ​)</string>
    <string name="label_express_delivery">ដឹកជញ្ជូន​រហ័ស</string>
    <string name="label_confirm_order_tips_hint">ចូលបំពេញ​ សូមចរចារជាមួយសេវាកម្មអតិថិជនជាមុនសិន</string>
    <string name="label_order_receive_address">អាស័យដ្ឋាន​ទទួល​ជញ្ជូន</string>
    <string name="label_order_pick_address">អាស័យដ្ឋាន​យកទំនិញ</string>
    <string name="label_submit_order">បន្តទិញ​</string>
    <string name="label_goods_price">តម្លៃទំនិញសរុប</string>
    <string name="format_use_coupon">%sអាចប្រេី</string>
    <string name="format_coupon_drop_off"> -%s</string>
    <string name="label_freight_tips">▲រំលឹកៈការគិតថ្លៃដឹកទំនិញក្រោយពេលដឹកជញ្ជូន​ ដើម្បីបង្កើនពេលវេលាដឹកជញ្ជូន សូមបញ្ចូលទឹកប្រាក់ជាមុនទៅកាបូបដើម្បីបង់ថ្លៃដឹកជញ្ជូន</string>
    <string name="label_international_mode_of_transport">វិធី​ដឹកជញ្ជូន</string>
    <string name="label_land_transportation">ផ្លូវ​គោក</string>
    <string name="label_coupon_empty_to_use">គ្មាន</string>
    <string name="label_total">សរុប</string>
    <string name="label_total_price_goods">ទំនិញសរុប</string>
    <string name="label_amount_freight_goods">ការដឹកជញ្ជូនទំនិញ</string>
    <string name="label_amount_freight">ការដឹកជញ្ជូនទំនិញ</string>
    <string name="label_pay_online">ការទូទាត់តាមអ៊ីនធឺណិត</string>
    <string name="label_pay_on_delivery">សាច់ប្រាក់នៅពេលដឹកជញ្ជូន</string>
    <string name="label_pay_amount">តម្លៃ​សរុប</string>
    <string name="label_submit">ស្នេីសុំ</string>
    <string name="label_total_amount">តម្លៃទំនិញសរុប</string>
    <string name="label_coupon_amount_reduce"> </string>
    <string name="label_pay_amount_order_detail">តម្លៃ​សរុប</string>
    <string name="label_server_tips_detail">ថ្លៃសេវា</string>
    <string name="tip_pls_select_address">អាស័យដ្ឋាន​ទទួល​ជញ្ជូន</string>
    <string name="label_submit_succ">ស្នេីសុំបានសម្រេច</string>
    <string name="label_rechage_succ_tips">ស្ស្នេីសុំបានសម្រេច​ រង់ចាំ​ពិនិត្យ</string>
    <string name="label_confirm_pay">បញ្ជាក់ការបង់ប្រាក់</string>
    <string name="label_pay_wallet">កាបូប</string>
    <string name="tip_balance_not_enought">ទឹកប្រាក់មិនគ្រប់គ្រាន់សូមបញ្ចូលទឹកប្រាក់</string>
    <string name="label_give_up_pay">តើអ្នកចង់បោះបង់ប្រតិបត្តិការនេះមែនទេ?</string>
    <string name="label_pay_succ">ការទូទាត់ជោគជ័យ</string>
    <string name="label_back_to_home">ទំព័រដើម</string>
    <string name="label_view_order">បញ្ជីទិញទំនិញ</string>
    <string name="label_order">បញ្ជីទិញទំនិញ</string>
    <string name="label_all_orders">ទាំងអស់</string>
    <string name="label_my_wallet">កាបូប</string>
    <string name="label_coupon">ប័ណ្ណ​បញ្ចុះ​តម្លៃ</string>
    <string name="label_address_manage">អាស័យដ្ឋាន​ទទួល</string>
    <string name="label_my_collection">ពេញចិត្ត</string>
    <string name="label_app_help">ជំនួយក្នុងការប្រើប្រាស់</string>
    <string name="label_setting">ការកំណត់</string>
    <string name="label_owner_setting">ពត៌មាន​ផ្ទាល់ខ្លួន</string>
    <string name="label_select_reason">សូម​ជ្រើសរើស</string>
    <string name="label_order_all">ទាំងអស់</string>
    <string name="label_order_unpay">រង់ចាំ​ទូទាត់</string>
    <string name="label_order_deliver_waiting">រៀប​ចំ​ទំនិញ</string>
    <string name="label_order_delivered">កំពុងដឹកជញ្ជូន</string>
    <string name="label_order_complete">បានបញ្ចប់</string>
    <string name="label_order_close">បានបោះបង់</string>
    <string name="label_order_audit_waiting">ពិនិត្យ​ឡើង​វិញ</string>
    <string name="format_item_goods_price">ផលិត​ផល%s，</string>
    <string name="format_item_goods_freight">ដឹកជញ្ជូន%s，</string>
    <string name="format_item_goods_total">សរុប%s</string>
    <string name="format_item_goods_paid">បានទូទាត់រួច%s</string>
    <string name="label_order_to_pay">ទូទាត់​ប្រាក់</string>
    <string name="label_order_cancel">បោះបង់ការបញ្ជាទិញ</string>
    <string name="label_order_delete">លុបការបញ្ជាទិញ</string>
    <string name="label_order_confirm_received">បញ្ជាក់ការទទួល</string>
    <string name="label_history_order">ការបញ្ជាទិញរបស់ខ្ញុំ</string>
    <string name="label_cancel_order_1">អាស័យដ្ឋាន​ ឬ លេខទូរស័ព្ទដៃមិនត្រឹមត្រូវ</string>
    <string name="label_cancel_order_2">ភ្លេចលេខកូដ​បញ្ជាក់ / ទឹកប្រាក់មិនគ្រប់គ្រាន់</string>
    <string name="label_cancel_order_3">មិនអាចបង់ប្រាក់តាមធម្មតា</string>
    <string name="label_cancel_order_4">មិនចង់ទិញ</string>
    <string name="label_cancel_order_5">ហេតុផលផ្សេងទៀត</string>
    <string name="dialog_delete_order_title">លុបការបញ្ជាទិញ？</string>
    <string name="dialog_delete_order_content">ការបញ្ជាទិញត្រូវបានលុបចោល​មិនអាចកំណត់ឡើងវិញបានទេ សូមពិចារណាដោយយកចិត្តទុកដាក់</string>
    <string name="label_recharge">បញ្ចូល​ទឹកប្រាក់</string>
    <string name="label_my_balance">សមតុល្យ</string>
    <string name="label_bill">វិក័យប័ត្រ</string>
    <string name="label_wallet_logs">ទិន្នន័យ</string>
    <string name="label_amount_recharge">បញ្ចូលទឹកប្រាក់</string>
    <string name="label_recharge_payable">ទឹកប្រាក់</string>
    <string name="label_recharge_by_self">បំពេញទឹកប្រាក់</string>
    <string name="label_choose_pay_way">ជ្រើសរើស​របៀបបញ្ចូល</string>
    <string name="label_recharge_now">ជំហ៊ាន​បន្ទាប់​</string>
    <string name="label_recharge_bank">បញ្ចូល​ទឹកប្រាក់</string>
    <string name="label_recharge_success">បញ្ចូលជោគជ័យ</string>
    <string name="label_bank_account_tips">ជ្រើសរើស​កាតធនាគារ</string>
    <string name="label_bank">ធនាគារ</string>
    <string name="label_clip">ចម្លង</string>
    <string name="label_account">គណនី</string>
    <string name="label_name">ឈ្មោះ</string>
    <string name="label_recharge_tips">*សូមធ្វេីការផ្ទេរប្រាក់​រួចរាល់​មុននឹង​ធ្វេីការស្នេីសុំ</string>
    <string name="label_recharge_amount">ទឹកប្រាក់​ដែលបានផ្ទេរ</string>
    <string name="label_record">ទិន្នន័យ​</string>
    <string name="label_recharge_status_reject">ការស្នើសុំបានបរាជ័យ</string>
    <string name="label_recharge_status_audit_waiting">ពិនិត្យ​ឡើង​វិញ</string>
    <string name="label_recharge_status_succ">បញ្ចូលជោគជ័យ</string>
    <string name="label_recharge_history">ទិន្នន័យ</string>
    <string name="label_upload_recharge_evidence">ចែករំលែករូបភាព​ដែលបានផ្ទេរប្រាក់</string>
    <string name="text_take_photo">រូបថត</string>
    <string name="text_from_album">អាល់ប៊ុមរូបថត</string>
    <string name="text_please_agree_to_authorize">ដើម្បីធានាបាននូវមុខងារសូមយល់ព្រមលើការប្រើប្រាស់អាល់ប៊ុមរូបថតនិងមុខងារផ្សេងទៀត</string>
    <string name="tip_pls_select_bank">ជ្រើសរើស​កាតធនាគារ</string>
    <string name="tip_pls_upload_recharge_proof">ចែករំលែករូបភាព​ដែលបានផ្ទេរប្រាក់</string>
    <string name="please_input_recharge_amount">ទឹកប្រាក់​បញ្ចូល</string>
    <string name="please_select_bank">ជ្រើសរើស​កាតធនាគារ</string>
    <string name="label_select_bank">ជ្រើសរើស​កាតធនាគារ</string>
    <string name="label_order_audit">ពិនិត្យ​ឡើង​វិញ</string>
    <string name="label_can_use_coupon">ប័ណ្ណ​បញ្ចុះ​តម្លៃ</string>
    <string name="label_coupon_used">ប្រើប្រាស់រួច</string>
    <string name="label_coupon_unused">មិនទាន់ប្រើ</string>
    <string name="label_coupon_overtime">ផុតកំណត់</string>
    <string name="label_address_manager">អាស័យដ្ឋាន​ទទួល</string>
    <string name="label_default">លំនាំដើម</string>
    <string name="label_set_default">កំណត់ជាលំនាំដើម</string>
    <string name="label_add_address">បន្ថែមថ្មី</string>
    <string name="label_add_new_address">បន្ថែម​អាស័យដ្ឋាន</string>
    <string name="label_confirm">សម្រេច</string>
    <string name="label_expected_arrival">ប្រហែល​ថ្ងៃមកដល់</string>
</resources>