<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_18pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_worry_shopping"
            android:textColor="@color/blackA"
            android:textSize="@dimen/text_18pt"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        style="@style/horLineStyle"
        android:background="#f0f0f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_h_common"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/ic_goods_service_icon" />

            <TextView
                style="@style/blackA14sp"
                android:layout_marginLeft="16dp"
                android:text="@string/label_taobao_purchasing"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            style="@style/grayA14sp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_taobao_tips" />

        <View
            android:layout_marginTop="20dp"
            style="@style/horLineStyle"
            android:background="#f0f0f0" />


    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_h_common"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/ic_goods_service_icon" />

            <TextView
                style="@style/blackA14sp"
                android:layout_marginLeft="16dp"
                android:text="@string/label_national_transport"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            style="@style/grayA14sp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_national_transport_tips" />

        <View
            android:layout_marginTop="20dp"
            style="@style/horLineStyle"
            android:background="#f0f0f0" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_h_common"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/ic_goods_service_icon" />

            <TextView
                style="@style/blackA14sp"
                android:layout_marginLeft="16dp"
                android:text="@string/label_deliver_goods"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            style="@style/grayA14sp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_deliver_goods_tips" />

        <View
            android:layout_marginTop="20dp"
            style="@style/horLineStyle"
            android:background="#f0f0f0" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_h_common"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/ic_goods_service_icon" />

            <TextView
                style="@style/blackA14sp"
                android:layout_marginLeft="16dp"
                android:text="@string/label_service_3"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            style="@style/grayA14sp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_service_3_tips" />

        <View
            android:layout_marginTop="20dp"
            style="@style/horLineStyle"
            android:background="#f0f0f0" />


    </LinearLayout>


    <View
        style="@style/horLineStyle"
        android:background="#f0f0f0" />

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/sumbitTvStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/margin_h_common"
        android:layout_marginVertical="10dp"
        android:background="@drawable/shape_round_rect_r22_fill_primary"
        android:text="@string/label_confirm"
        android:textSize="@dimen/text_14pt" />

</LinearLayout>