<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/v_mark_coupon_dialog"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/label_select_reason"
                android:textColor="@color/blackA"
                android:textSize="@dimen/text_18pt"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_cancel_order_close"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="17dp"
                android:padding="5dp"
                android:src="@drawable/ic_dialog_close" />
        </RelativeLayout>

        <View style="@style/horLineStyle"
           />
        <RadioGroup
            android:id="@+id/rg_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >


            <RadioButton
                android:id="@+id/rb_1"
                android:text="@string/label_cancel_order_1"
                style="@style/dialogCancleRbStyle" />
            <View style="@style/horLineStyle"
                android:layout_marginLeft="50dp"/>
            <RadioButton
                android:id="@+id/rb_2"
                android:text="@string/label_cancel_order_2"
                style="@style/dialogCancleRbStyle" />
            <View style="@style/horLineStyle"
                android:layout_marginLeft="50dp"/>
            <RadioButton
                android:id="@+id/rb_3"
                android:text="@string/label_cancel_order_3"
                style="@style/dialogCancleRbStyle" />
            <View style="@style/horLineStyle"
                android:layout_marginLeft="50dp"/>
            <RadioButton
                android:id="@+id/rb_4"
                android:text="@string/label_cancel_order_4"
                style="@style/dialogCancleRbStyle" />
            <View style="@style/horLineStyle"
                android:layout_marginLeft="50dp"/>
            <RadioButton
                android:id="@+id/rb_5"
                android:text="@string/label_cancel_order_5"
                style="@style/dialogCancleRbStyle" />


        </RadioGroup>
        <View style="@style/horLineStyle"
            />
        <TextView
            android:id="@+id/tv_submit_cancel_dialog"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginHorizontal="@dimen/height_account_confirm_btn"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_primary_round_rect_r5"
            android:gravity="center"
            android:text="@string/label_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16pt" />
    </LinearLayout>


</LinearLayout>