<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tb_freight_illustrate"
            android:textColor="@color/blackA"
            android:textSize="@dimen/text_18pt"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        style="@style/horLineStyle"
        android:background="#f0f0f0" />

    <TextView
        style="@style/blackA14sp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/tb_freight_illustrate_1" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        style="@style/blackA14sp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/tb_freight_illustrate_2" />

    <View
        style="@style/horLineStyle"
        android:background="#f0f0f0" />

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/sumbitTvStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/margin_h_common"
        android:layout_marginVertical="10dp"
        android:background="@drawable/shape_round_rect_r22_fill_primary"
        android:text="@string/label_confirm"
        android:textSize="@dimen/text_14pt" />

</LinearLayout>