<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ly_pay_pwd_verify"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_rect_r10_fill_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            style="@style/blackA14sp"
            android:textSize="@dimen/text_16pt"
            android:text="@string/dialog_delete_order_title"
             />

        <TextView
            style="@style/grayA14sp"
            android:gravity="center"
            android:text="@string/dialog_delete_order_content"
            />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_cancel"
                android:text="@string/label_cancel"
                style="@style/cancelTvStyle" />

            <TextView
                android:id="@+id/tv_dialog_confirm"
                android:text="@string/label_confirm"
                android:layout_marginLeft="25dp"
                style="@style/sumbitTvStyle" />

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>